--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,2 @@
-YYYY-MM--DD
-  - Mijn aanpassing1
-  - Mijn aanpassing2
+Aanpassingen AP BO_Interpretaties versie 2023-04--01
+  - KwantitatieveWaarde vervangen door Maat
