--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,8 @@
-Aanpassingen AP BO_Interpretaties versie 2023-04--01
+Aanpassingen AP BO_BodemEnOndergrond versie 2022-04-28
+  - KwantitatieveWaarde vervangen door Maat
+Aanpassingen AP BO_Grondboringen versie2023-04-01
+  - KwantitatieveWaarde vervangen door Maat
+Aanpassingen AP BO_Observaties versie 2023-04-01
+  - KwantitatieveWaarde vervangen door Maat
+Aanpassingen AP BO_Interpretaties versie 2023-04-01
   - KwantitatieveWaarde vervangen door Maat
