--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,9 +2,12 @@ Aanpassingen AP RuimtelijkeBereiken versie 2024-04-15
 - TODO
 Aanpassingen AP BO_BodemEnOndergrond versie 2022-04-28
 - KwantitatieveWaarde vervangen door Maat
+- Verwijzingen naar het AP RuimtelijkeBereiken toegevoegd
 Aanpassingen AP BO_Grondboringen versie2023-04-01
 - KwantitatieveWaarde vervangen door Maat
+- Verwijzingen naar het AP RuimtelijkeBereiken toegevoegd
 Aanpassingen AP BO_Observaties versie 2023-04-01
 - KwantitatieveWaarde vervangen door Maat
 Aanpassingen AP BO_Interpretaties versie 2023-04-01
 - KwantitatieveWaarde vervangen door Maat
+- Verwijzingen naar het AP RuimtelijkeBereiken toegevoegd
