--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,11 +7,11 @@ AP BO_BodemEnOndergrond versie 2022-04-28,
 AP BO_Grondboringen versie2023-04-01,
 AP BO_Observaties versie 2023-04-01
  en AP BO_Interpretaties versie 2023-04-01:
-- KwantitatieveWaarde vervangen door Maat
-- Verwijzingen naar het AP RuimtelijkeBereiken toegevoegd
-- Literal ipv GetypeerdeString als datatype
-- Duidelijk onderscheid redefine/subset
-- Behoud van uri bij redefine
+- KwantitatieveWaarde werd vervangen door Maat.
+- Verwijzingen naar het AP RuimtelijkeBereiken zijn toegevoegd.
+- Literal vervangt GetypeerdeString als datatype.
+- Er wordt nu duidelijk onderscheid tussen redefine & subset gemaakt.
+- De uri van het oorspronkelijk attribuut of rol wordt behouden bij een redefine.
 Specifieke aanpassingen:
 Aanpassingen AP RuimtelijkeBereiken versie 2024-04-15:
 - ()
@@ -26,6 +26,6 @@ Aanpassingen AP BO_BodemEnOndergrond versie 2022-04-28:
 Aanpassingen AP BO_Grondboringen versie2023-04-01:
 - ()
 Aanpassingen AP BO_Observaties versie 2023-04-01:
-- ()
+- Korrelverdeling.onderbrekingVan en Korrelverdeling.onderbrekingTot bleken overbodig en zijn geschrapt.
 Aanpassingen AP BO_Interpretaties versie 2023-04-01:
 - ()
