--- a/CHANGELOG
+++ b/CHANGELOG
@@ -20,7 +20,7 @@ Aanpassingen AP Sensoren en Bemonstering versie 2022-04-28:
 - ()
 Aanpassingen AP Bodem en Ondergrond versie 2022-04-28:
 - ()
-Aanpassingen AP Grondboringen versie 2023-04-01
+Aanpassingen AP Grondboringen versie 2023-04-01:
 - Kardinaliteit Grondmonster.type vaar 0..* ipv 0..1.
 Aanpassingen AP BO_Observaties versie 2023-04-01:
 - Korrelverdeling.onderbrekingVan en Korrelverdeling.onderbrekingTot bleken overbodig en zijn geschrapt.
