--- a/CHANGELOG
+++ b/CHANGELOG
@@ -23,7 +23,8 @@ Aanpassingen AP Bodem en Ondergrond versie 2022-04-28:
 Aanpassingen AP Grondboringen versie 2023-04-01:
 - Kardinaliteit Grondmonster.type vaar 0..* ipv 0..1.
 Aanpassingen AP BO_Observaties versie 2023-04-01:
-- Korrelverdeling.onderbrekingVan en Korrelverdeling.onderbrekingTot bleken overbodig en zijn geschrapt.
+- Korrelverdeling.onderbrekingVan en Korrelverdeling.onderbrekingTot geschrapt.
+- Fractiemeting.meetpunt geschrapt.
 - Samendrukbaarheidstrap.hoogte vervangen door Samendrukbaarheidstrap.samendrukking.
 Aanpassingen AP BO_Interpretaties versie 2023-04-01:
 - ()
