--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,7 +13,7 @@ AP BO_Observaties versie 2023-04-01
 - De uri van het oorspronkelijk attribuut of rol wordt behouden bij een redefine.
 Specifieke aanpassingen:
 Aanpassingen AP RuimtelijkeBereiken versie 2024-04-15:
-- ()
+- Ontbrekende definities toegevoegd.
 Aanpassingen AP Observaties en Metingen versie 2022-04-28:
 - ()
 Aanpassingen AP Sensoren en Bemonstering versie 2022-04-28:
