--- a/CHANGELOG
+++ b/CHANGELOG
@@ -23,9 +23,13 @@ Aanpassingen AP+VOC Bodem en Ondergrond versie 2022-04-28:
 Aanpassingen AP+VOC Grondboringen versie 2023-04-01:
 - Kardinaliteit Grondmonster.type vaar 0..* ipv 0..1 om meerdere classificaties toe te laten.
 Aanpassingen AP+VOC BO_Observaties versie 2023-04-01:
+- Ontbrekende definities aan de specificatie toegevoegd.
 - Korrelverdeling.onderbrekingVan en Korrelverdeling.onderbrekingTot geschrapt, gedekt door Fractiemeting.meetpuntOndergrens/bovenGrens.
 - Korrelverdeling.humusKalkVerwijderd omdat er ook nog andere parameters zijn en ze allemaal dmv Observatie/Observatieprocedure.parameter kunnen worden beschreven.
 - Samendrukbaarheidstrap.hoogte vervangen door Samendrukbaarheidstrap.samendrukking omdat er nog andere maten voor samendrukking bestaan dan hoogte (vh Monster na uitgeoefende druk).
-- Samendrukbaarheidsproef.diameter/initiëleHoogte/massa omdat er ook nog andere parameters zijn en ze allemaal dmv Observatie/Observatieprocedure.parameter kunnen worden beschreven.
+- Samendrukbaarheidsproef.diameter/initiëleHoogte/massa verwijderd omdat er ook nog andere parameters zijn en ze allemaal dmv Observatie/Observatieprocedure.parameter kunnen worden beschreven.
+- Schuifweerstandsproef en Schuifweerstandskarakteristieken zijn nu gemodelleerd als Meting ipv als Meetreeks.
+- Ipv associaties tussen de Schuifweerstandskarakteristieken en de Schuifweerstandsproeven waarop deze gebaseerd zijn de proeven nu verzameld in een observatieverzameling Schuifweerstandsproefreeks.
+- Deze reeks vormt de input van de observatieprocedure Schuifweerstandskarakteristiekenprocedure.
 Aanpassingen AP+VOC BO_Interpretaties versie 2023-04-01:
 - ()
