--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 Algemeen
-Aanpassingen AP+VOC RuimtelijkeBereiken versie 2024-04-15,
-AP+VOC Observaties en Metingen versie 2022-04-28,
+Aanpassingen AP+VOC RuimtelijkeBereiken versie 2024-04-15
+AP+VOC Observaties en Metingen versie 2022-04-28:
+- Maat heeft geen attribuut maat meer.
 AP+VOC Sensoren en Bemonstering versie 2022-04-28,
 AP+VOC Bodem en Ondergrond versie 2022-04-28,
 AP+VOC Grondboringen versie 2023-04-01,
