--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,7 +15,7 @@ Specifieke aanpassingen:
 Aanpassingen AP+VOC RuimtelijkeBereiken versie 2024-04-15:
 - Ontbrekende onderdelen aan de specificatie toegevoegd: samenvattingen, definities, uri's.
 Aanpassingen AP+VOC Observaties en Metingen versie 2022-04-28:
-- ()
+- Klasse Domeinobject toegevoegd
 Aanpassingen AP+VOC Sensoren en Bemonstering versie 2022-04-28:
 - ()
 Aanpassingen AP+VOC Bodem en Ondergrond versie 2022-04-28:
