--- a/CHANGELOG
+++ b/CHANGELOG
@@ -37,4 +37,4 @@ Aanpassingen AP+VOC BO_Observaties versie 2023-04-01:
 - Ipv associaties tussen de Schuifweerstandskarakteristieken en de Schuifweerstandsproeven waarop deze gebaseerd zijn de proeven nu verzameld in een observatieverzameling Schuifweerstandsproefreeks.
 - Deze reeks vormt de input van de observatieprocedure Schuifweerstandskarakteristiekenprocedure.
 Aanpassingen AP+VOC BO_Interpretaties versie 2023-04-01:
-- Geen.
+- AntrogeneKenmerkenInterpretatie generiek uitgewerkt.
