--- a/CHANGELOG
+++ b/CHANGELOG
@@ -26,11 +26,13 @@ Aanpassingen AP+VOC Bodem en Ondergrond versie 2022-04-28:
 - Interval toegevoegd als subklasse van ProfielElement + Laag is nu subklasse van Interval.
 - Definitie van Laag verduidelijkt.
 - Associatie Profiel->Profielelement is veranderd van composiet naar aggregaat.
+- Datatype van BO_RuimtelijkBemonsteringsobject.diepte vervangen door Maat.
 Aanpassingen AP+VOC Grondboringen versie 2023-04-01:
 - Kardinaliteit Grondmonster.type vaar 0..* ipv 0..1 om meerdere classificaties toe te laten.
 - Domeinobject en Object terug aan het diagram toegevoegd.
 - Bemonstering.bemonsterdObject terug naar Object ipv Grondobject.
 - Beperking van Grondboringen tot boringen voor Bemonstering toegevoegd aan gebruiksnota. 
+- Datatype van Boorgat.diepte vervangen door Maat.
 Aanpassingen AP+VOC BO_Observaties versie 2023-04-01:
 - Ontbrekende definities aan de specificatie toegevoegd.
 - Korrelverdeling.onderbrekingVan en Korrelverdeling.onderbrekingTot geschrapt, gedekt door Fractiemeting.meetpuntOndergrens/bovenGrens.
