--- a/CHANGELOG
+++ b/CHANGELOG
@@ -29,3 +29,10 @@ Aanpassingen AP BO_Observaties versie 2023-04-01:
 - Samendrukbaarheidsproef.diameter/initiëleHoogte/massa omdat er ook nog andere parameters zijn en ze allemaal dmv Observatie/Observatieprocedure.parameter kunnen worden beschreven.
 Aanpassingen AP BO_Interpretaties versie 2023-04-01:
 - ()
+
+
+2024-11-04
+- opsplitsing vocabularium en applicatieprofile EAPs
+- verwijder sonderingen van beide
+- range geometrie in PuntWaardePaar connecteer met datatype Punt uit generiek (link was broken)
+- verwijder uit grondboringen dubbele klasse grondboring en copies van klassen.
