--- a/CHANGELOG
+++ b/CHANGELOG
@@ -45,6 +45,8 @@ Aanpassingen AP BO_Interpretaties versie 2023-04-01:
 - herlinken van range Geometrie van verschillende eigenschappen.
 - herlinken van range locatie in verschillende eigenschappen.
 - herlinken van range Agent in eigenschap toegekendDoor
+- herlinken van range Punt in verschillende eigenschappen
 - eigenschap metadata verwijderd omdat die niet bestaat in html (bestaat wel als rol)
 - klasse Bereik komt 2x voor: verwijdering duplicaat in package Hulppakket. 
+
 
